<resources>
    <string name="app_name">SimpleTIM</string>
    <string name="top_lable_name">好友列表</string>
    <string name="action_regist_now">立即注册</string>
    <string name="action_settings">安全退出</string>
    <string name="title_activity_login">账号登录</string>
    <string name="title_activity_regist">账号注册</string>
    <string name="description">这是一个简易的模拟TIM客户端</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--LoginActivity-->
    <string name="new_register">新用户注册</string>
    <string name="login_help">无法登录?</string>
    <string name="prompt_email">QQ号/手机/邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="real_name">真实姓名</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign</string>
    <string name="action_regist">注册</string>
    <string name="action_regist_short">regist</string>
    <string name="error_invalid_email">不是有效的账号</string>
    <string name="error_invalid_password">密码太短,至少输入4位</string>
    <string name="error_incorrect_password">密码无效</string>
    <string name="error_field_required">用户名无效</string>
</resources>
